Update with redirect

--- a/website/index.qmd
+++ b/website/index.qmd
@@ -8,6 +8,8 @@ listing:
   sort-ui: false
   filter-ui: false
 page-layout: full
+aliases: 
+  - chapters/evaluation_data_analysis.html
 title-block-banner: true
 ---
 
